--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,3 @@
-/* write your override styles here */
+#wall .tag-1, #wall .tag-1 + #tag-2, div#wall .tag-1 + #tag-2 + #tag-3.slick.wicked, #wall .parent #tag-4, div#wall .parent + .parent > #tag-5.slick, div#wall div.parent + div.parent + div.parent > div + div > div#tag-6, body div#wall > div#tag-3 + div.parent + div.parent + div.parent + div.parent > div > #tag-7.slick {
+    display: none;
+}
